[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitalhub-runtime-servicegraph"
version = "0.15.1"
description = "Service Graph runtime for DHCore"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "digitalhub@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.10, <3.15"
dependencies = [
"digitalhub[full]>=0.15.0b, <0.16",
"nuclio-sdk",
"msgpack",
"pip",
]

[project.optional-dependencies]
dev = [
    "digitalhub[dev]>=0.15.0b, <0.16"
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk-runtime-servicegraph"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.15.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
